--- a/food/package.json
+++ b/food/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "axios": "^1.3.4",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
